--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "gulp build",
-    "start": "yarn build && node build/index.js"
+    "start": "yarn build && node build/index.js",
 	"dist": "yarn build && make"
   }
 }
