more config settings

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
 	"port": 7777,
-	"nickname": "Gory Gaming 1 {}/20"
+	"nickname": "Gory Gaming 1 {}/20",
+	"path": "C:/Users/Administrator/Roaming/SCP Secret Laboratory/ServerLogs",
+	"guildid": "594630477240074265"
 }
