--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "nexe": "^3.3.2",
+    "node-watch": "^0.6.2",
     "typescript": "^3.5.2"
   },
   "scripts": {
     "build": "gulp build",
     "start": "yarn build && node build/index.js",
-	"dist": "yarn build && make"
+    "dist": "yarn build && make"
   }
 }
