--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
 	"port": 7777,
-	"nickname": "Gory Gaming 1 {}/20",
-	"path": "C:/Users/Administrator/Roaming/SCP Secret Laboratory/ServerLogs",
-	"guildid": "594630477240074265"
+	"nickname": "Gory Gaming 1 {0}/{1}",
+	"path": "C:/Users/Administrator/AppData/Roaming/SCP Secret Laboratory/ServerLogs/",
+	"guildid": "594630477240074265",
+	"maxplayers": 20
 }
