--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rockstar-main",
+  "name": "rockstar-player-disp",
   "version": "1.0.0",
   "description": "6 Server log, /report, /help, /role-react",
   "main": "build/index.js",
@@ -13,7 +13,8 @@
     "gulp-typescript": "^5.0.1",
     "nexe": "^3.3.2",
     "node-watch": "^0.6.2",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "typescript-string-operations": "^1.3.1"
   },
   "scripts": {
     "build": "gulp build",
